--- a/dokuwiki-ittlabb/ingress-tls.yaml
+++ b/dokuwiki-ittlabb/ingress-tls.yaml
@@ -1,7 +1,7 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: ittlabb-dokuwiki
+  name: dokuwiki
   annotations:
     kubernetes.io/ingress.class: "nginx"    
     cert-manager.io/issuer-name: ca-issuer
@@ -16,5 +16,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: ittlabb-dokuwiki
+          serviceName: dokuwiki
           servicePort: 80
