--- a/phpipam-galera/secrets.yaml
+++ b/phpipam-galera/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   name: mysql-pass
 type: Opaque
 data:
-  password: TGFncmFJbnRlaMOkcgo==
+  password: base64
 ---
 apiVersion: v1
 kind: Secret
@@ -13,7 +13,7 @@ metadata:
   name: ipam-pass
 type: Opaque
 data:
-  password: TGFncmFJbnRasdfasdf==
+  password: base64
 ---  
 apiVersion: v1
 kind: Secret
@@ -21,5 +21,5 @@ metadata:
   name: cron-pass
 type: Opaque
 data:
-  password: TGFncmFJbnRasdfasdf==
+  password: base64
 
