--- a/keycloak/backend/backend-ingress.yaml
+++ b/keycloak/backend/backend-ingress.yaml
@@ -1,11 +1,16 @@
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: backend
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/issue-temporary-certificate: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true"
+    
 spec:
-  tls:
-    - hosts:
-      - BACKEND_HOST
   rules:
   - host: BACKEND_HOST
     http:
@@ -13,4 +18,8 @@ spec:
       - backend:
           serviceName: backend
           servicePort: 8080
-
+        path: /
+  tls:
+  - hosts:
+    - BACKEND_HOST
+    secretName: backend-tls
