--- a/keycloak/frontend/frontend-ingress.yaml
+++ b/keycloak/frontend/frontend-ingress.yaml
@@ -1,11 +1,16 @@
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: frontend
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/issue-temporary-certificate: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true"
+    
 spec:
-  tls:
-    - hosts:
-      - FRONTEND_HOST
   rules:
   - host: FRONTEND_HOST
     http:
@@ -13,4 +18,9 @@ spec:
       - backend:
           serviceName: frontend
           servicePort: 80
+        path: /
+  tls:
+  - hosts:
+    - FRONTEND_HOST
+    secretName: frontend-tls
 
